--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Inject style tag to document head.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo lol"
   },
   "repository": {
     "type": "git",
