--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "style-inject",
   "version": "0.1.2",
   "description": "Inject style tag to document head.",
-  "main": "index.js",
+  "main": "dist/style-inject.js",
   "scripts": {
-    "test": "echo lol"
+    "test": "echo lol",
+    "build": "bili --format umd",
+    "prepublishOnly": "npm run build",
+    "lint": "xo"
   },
   "repository": {
     "type": "git",
@@ -15,10 +18,22 @@
     "css",
     "inject"
   ],
+  "files": [
+    "dist"
+  ],
   "author": "EGOIST <0x142857@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/egoist/style-inject/issues"
   },
-  "homepage": "https://github.com/egoist/style-inject#readme"
+  "homepage": "https://github.com/egoist/style-inject#readme",
+  "devDependencies": {
+    "bili": "^0.18.2",
+    "eslint-config-rem": "^3.2.0",
+    "xo": "^0.18.2"
+  },
+  "xo": {
+    "extends": "rem/prettier",
+    "envs": ["browser"]
+  }
 }
